--- a/src/ios/GoogleService-Info.plist
+++ b/src/ios/GoogleService-Info.plist
@@ -2,5 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>420162112821-d7khkcd3f07kq2ie44g8r46n7dm63rb9.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.420162112821-d7khkcd3f07kq2ie44g8r46n7dm63rb9</string>
+	<key>API_KEY</key>
+	<string>AIzaSyAIYwt8WxyC0DlA-3kx6kNaB2GqPkLd6Rg</string>
+	<key>GCM_SENDER_ID</key>
+	<string>420162112821</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.viewsource-Four51-boilerplate</string>
+	<key>PROJECT_ID</key>
+	<string>glatfelter-ordering-hub</string>
+	<key>STORAGE_BUCKET</key>
+	<string>glatfelter-ordering-hub.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true/>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false/>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true/>
+	<key>IS_GCM_ENABLED</key>
+	<true/>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true/>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:420162112821:ios:20def86dbe9b4879</string>
+	<key>DATABASE_URL</key>
+	<string>https://glatfelter-ordering-hub.firebaseio.com</string>
 </dict>
 </plist>
